dist/LineScript-win64-20260616/tests/cases/compile_fail/bitmap_bad_types.lsc
main() -> i64 do
  declare bad = bitmap_new("wide", 16)
  println(bad)
  return 0
end
